[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itdirr"
version = "0.7.3"
description = "Python SDK for ИТД.com API — форк ITDpy by IRRatium"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Gam5510" },
  { name = "IRRatium" }
]

dependencies = [
  "requests>=2.28.0"
]

[tool.setuptools]
packages = ["itdirr"]

[project.urls]
Homepage = "https://github.com/IRRatium/itdirr"
Repository = "https://github.com/IRRatium/itdirr"
